--- a/src/Backgesellschaft/WebBundle/Resources/views/Newsletter/activated.html.twig
+++ b/src/Backgesellschaft/WebBundle/Resources/views/Newsletter/activated.html.twig
@@ -1,9 +1,14 @@
 {% extends "BackgesellschaftWebBundle::page.html.twig" %}
 {% block content %}
-    <article class="jumbotron">
-        <h1>Lecker!</h1>
+    <article class="container">
 
-        <p class="lead">Vielen Dank, dass Du dein Newsletter-Abonement bestätigt hast.</p>
+        <div class="page-header">
+            <h2>Lecker!</h2>
+        </div>
+
+        <div class="alert alert-info">
+            <p class="lead">Vielen Dank, dass Du dein <em>Backletter-Abonement</em> bestätigt hast.</p>
+        </div>
 
     </article>
 {% endblock content %}
