--- a/src/Backgesellschaft/WebBundle/Resources/views/Newsletter/already_subscribed.html.twig
+++ b/src/Backgesellschaft/WebBundle/Resources/views/Newsletter/already_subscribed.html.twig
@@ -1,9 +1,14 @@
 {% extends "BackgesellschaftWebBundle::page.html.twig" %}
 {% block content %}
-    <article class="jumbotron">
-        <h1>Huch!</h1>
+    <article class="container">
 
-        <p class="lead">Du bist bereits mit dieser E-Mail-Adresse eingetragen.</p>
+        <div class="page-header">
+            <h2>Hoppla!</h2>
+        </div>
+
+        <div class="alert alert-danger">
+            <p class="lead">Du bist bereits mit dieser E-Mail-Adresse eingetragen.</p>
+        </div>
 
     </article>
 {% endblock content %}
