--- a/src/Backgesellschaft/WebBundle/Resources/views/page.html.twig
+++ b/src/Backgesellschaft/WebBundle/Resources/views/page.html.twig
@@ -4,39 +4,91 @@
 <head>
     <title>{{ title|default(default_title) }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" type="text/css">
+    {% stylesheets filter="yui_css,cssrewrite"
+    "bundles/backgesellschaftweb/css/styles.scss" %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet"/>
+    {% endstylesheets %}
 </head>
 <body>
 <div id="fb-root"></div>
-<div class="container">
-    <header class="header">
-        <h1 class="text-muted">{{ org }}</h1>
-    </header>
+<header>
+    <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
+        <h1 class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ path('bg_index') }}">{{ org }}</a>
+        </h1>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Backmischungen</a></li>
+                <li><a href="#about">Backen aus Überzeugung</a></li>
+                <li><a href="{{ path('bg_newsletter_subscribe') }}">Backletter</a></li>
+                <li><a href="#contact">Kontakt</a></li>
+            </ul>
+        </div>
+        <!-- /.nav-collapse -->
+    </nav>
+    <!-- /.navbar -->
+</header>
+
 {% block content %}
 {% endblock %}
-    <footer class="row marketing">
-        <div class="col-lg-6">
-            <h2>Folge uns auf Facebook</h2>
-            <div class="fb-like-box" data-href="https://www.facebook.com/Backgesellschaft" data-width="292" data-height="300" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
-        </div>
 
-        <div class="col-lg-6">
-            <h2>Folge uns auf Twitter</h2>
-            <a class="twitter-timeline" href="https://twitter.com/backgesellen" data-widget-id="384039603444793344">Tweets von @backgesellen</a>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <h2>Folge uns auf Facebook</h2>
+
+                <div class="fb-like-box" data-href="https://www.facebook.com/Backgesellschaft" data-width="292"
+                     data-height="300"
+                     data-show-faces="true"
+                     data-stream="false"
+                     data-colorscheme="dark"
+                     data-show-border="false"
+                     data-header="false"></div>
+            </div>
+            {% if newsletter_form is defined %}
+            <div class="col-lg-6">
+                <h2>Backletter</h2>
+
+                <p class="lead">Melde dich jetzt für unseren leckeren <em>Backletter</em> an!</p>
+
+                <form method="post" action="{{ path('bg_newsletter_subscribe') }}" class="form-inline" role="form">
+
+                    <fieldset class="form-group">
+                        <label class="sr-only" for="email">E-Mail</label>
+                        <input type="email" class="form-control" name="newsletter_subscribe[email]" id="email"
+                               placeholder="name@domain.de" required>
+                    </fieldset>
+                    <button type="submit" class="btn">Genießer klicken hier!</button>
+                    {{ form_row(newsletter_form._token) }}
+                </form>
+            </div>
+            {% endif %}
         </div>
-    </footer>
-</div> <!-- /container -->
+    </div>
+</footer>
 {% block javascript %}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script>(function(d, s, id) {
+    {% javascripts filter="yui_js"
+    "bundles/backgesellschaftweb/js/main.js" %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+    <script>(function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
+            js = d.createElement(s);
+            js.id = id;
             js.src = "//connect.facebook.net/de_DE/all.js#xfbml=1&appId=481690871929626";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
