--- a/src/Backgesellschaft/WebBundle/Resources/public/css/styles.scss
+++ b/src/Backgesellschaft/WebBundle/Resources/public/css/styles.scss
@@ -24,27 +24,21 @@ html {
   }
 }
 
-div.stage {
-   background-color: $choco;
-}
-
-.carousel {
-  border-left: 1px solid #fff;
-  border-right: 1px solid #fff;
+.container.carousel {
+  padding: 0;
 }
 
 .carousel-caption {
   @extend .dosis;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 2.5em;
-  text-shadow:
-    0 1px 2px rgba(0,0,0,0.6),
-    1px 1px 2px rgba(0,0,0,0.6),
-    1px 0 2px rgba(0,0,0,0.6),
-    0 -1px 2px rgba(0,0,0,0.6),
-    -1px -1px 2px rgba(0,0,0,0.6),
-    -1px 0 2px rgba(0,0,0,0.6)
-    ;
+  text-align: left;
+  line-height: 110%;
+  left: 5%;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6), 1px 1px 2px rgba(0, 0, 0, 0.6), 1px 0 2px rgba(0, 0, 0, 0.6),
+    0 -1px 2px rgba(0, 0, 0, 0.6),
+    -1px -1px 2px rgba(0, 0, 0, 0.6),
+    -1px 0 2px rgba(0, 0, 0, 0.6);
   small {
     font-weight: normal;
   }
@@ -63,13 +57,15 @@ header {
   }
 }
 
-body {
-  padding-top: 50px;
+@media screen and (min-width: 768px) {
+  body {
+    padding-top: 50px;
+  }
 }
 
 footer {
-  background-color: $grey;
-  color: #fff;
+  background-color: $lightgrey;
+  color: invert($lightgrey);
   margin-top: 4em;
   h2 {
     @extend .dosis;
