--- a/src/Backgesellschaft/WebBundle/Resources/views/Web/index.html.twig
+++ b/src/Backgesellschaft/WebBundle/Resources/views/Web/index.html.twig
@@ -1,56 +1,52 @@
 {% extends "BackgesellschaftWebBundle::page.html.twig" %}
 {% block content %}
 
-    <div class="stage">
 
-        <div class="container">
 
-            {# Slider #}
-            <div class="carousel slide" data-interval="5000" id="slider">
-                <ol class="carousel-indicators">
-                    <li data-target="#slider" data-slide-to="0" class="active"></li>
-                    <li data-target="#slider" data-slide-to="1"></li>
-                    <li data-target="#slider" data-slide-to="2"></li>
-                </ol>
+    {# Slider #}
+    <div class="container carousel slide" data-interval="5000" id="slider">
+        <ol class="carousel-indicators">
+            <li data-target="#slider" data-slide-to="0" class="active"></li>
+            <li data-target="#slider" data-slide-to="1"></li>
+            <li data-target="#slider" data-slide-to="2"></li>
+        </ol>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="{{ asset('bundles/backgesellschaftweb/img/gebacken.jpg') }}"
-                             alt="Bestellen, backen, fertig!">
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="{{ asset('bundles/backgesellschaftweb/img/gebacken.jpg') }}"
+                     alt="Bestellen, backen, fertig!">
 
-                        <div class="carousel-caption">
-                            Bestellen, backen, fertig!
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="{{ asset('bundles/backgesellschaftweb/img/team.jpg') }}"
-                             alt="Wir mischen dein Küchenregal auf.">
-
-                        <div class="carousel-caption">
-                            Wir mischen dein Küchenregal auf.
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="{{ asset('bundles/backgesellschaftweb/img/qualitaet.jpg') }}"
-                             alt="Ist ökö, sieht schön aus und macht Sinn. (Auch als Geschenk.)">
-
-                        <div class="carousel-caption">
-                            Ist ökö, sieht schön aus und macht Sinn.<br>
-                            <small>{Auch als Geschenk}</small>
-                        </div>
-                    </div>
+                <div class="carousel-caption">
+                    Bestellen, backen, fertig!
                 </div>
+            </div>
+            <div class="item">
+                <img src="{{ asset('bundles/backgesellschaftweb/img/team.jpg') }}"
+                     alt="Wir mischen dein Küchenregal auf.">
 
-                <!-- Controls -->
-                <a class="left carousel-control" href="#slider" data-slide="prev">
-                    <span class="icon-prev"></span>
-                </a>
-                <a class="right carousel-control" href="#slider" data-slide="next">
-                    <span class="icon-next"></span>
-                </a>
+                <div class="carousel-caption">
+                    Wir mischen dein Küchenregal auf.
+                </div>
+            </div>
+            <div class="item">
+                <img src="{{ asset('bundles/backgesellschaftweb/img/qualitaet.jpg') }}"
+                     alt="Ist ökö, sieht schön aus und macht Sinn. Auch als Geschenk.">
+
+                <div class="carousel-caption">
+                    Ist ökö, sieht schön aus und macht Sinn.<br>
+                    <small>Auch als Geschenk</small>
+                </div>
             </div>
         </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#slider" data-slide="prev">
+            <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" href="#slider" data-slide="next">
+            <span class="icon-next"></span>
+        </a>
     </div>
 
 {% endblock content %}
