--- a/src/Backgesellschaft/WebBundle/Resources/views/page.html.twig
+++ b/src/Backgesellschaft/WebBundle/Resources/views/page.html.twig
@@ -22,14 +22,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ path('bg_index') }}">{{ org }}</a>
+                <a class="navbar-brand" href="{{ path('bg_index') }}">
+                    <span class="name">{{ org }}</span>
+                </a>
             </h1>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Backmischungen</a></li>
-                    <li><a href="#about">Backen aus Überzeugung</a></li>
+                    <li class="active"><a href="{{ path('bg_index') }}">Backmischungen</a></li>
                     <li><a href="{{ path('bg_newsletter_subscribe') }}">Backletter</a></li>
-                    <li><a href="#contact">Kontakt</a></li>
+                    <li><a href="{{ path('bg_contact') }}">Kontakt</a></li>
                 </ul>
             </div>
             <!-- /.nav-collapse -->
