--- a/src/Backgesellschaft/WebBundle/Resources/views/page.html.twig
+++ b/src/Backgesellschaft/WebBundle/Resources/views/page.html.twig
@@ -16,13 +16,15 @@
 <header class="container">
     <div class="row">
         <nav class="navbar navbar-default" role="navigation">
-            <h1 class="navbar-header">
+            <h1 class="navbar-header {{ logo_style|default('icon') }}">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="{{ path('bg_index') }}">
+                    <img src="{{ asset('bundles/backgesellschaftweb/img/logo-icon-small.gif') }}" class="icon">
+                    <img src="{{ asset('bundles/backgesellschaftweb/img/logo-small.gif') }}" class="logo">
                     <span class="name">{{ org }}</span>
                 </a>
             </h1>
@@ -33,9 +35,7 @@
                     <li><a href="{{ path('bg_contact') }}">Kontakt</a></li>
                 </ul>
             </div>
-            <!-- /.nav-collapse -->
         </nav>
-        <!-- /.navbar -->
     </div>
 </header>
 
