--- a/src/Backgesellschaft/WebBundle/Resources/views/Web/index.html.twig
+++ b/src/Backgesellschaft/WebBundle/Resources/views/Web/index.html.twig
@@ -1,8 +1,18 @@
+{% import _self as macro %}
+{% macro product(id, name, price, image) %}
+    <div class="product">
+        <img src="{{ asset('bundles/backgesellschaftweb/img/' ~ image) }}" alt="{{ name }}">
+        <div class="purchase">
+            <input type="number" min="0" step="1" name="amount[id]" value="0" class="form-control input-lg amount">
+            <span class="x">✕</span>
+            <span class="price">{{ price }},&ndash;</span>
+        </div>
+    </div>
+{% endmacro %}
+
 {% set logo_style = 'logo' %}
 {% extends "BackgesellschaftWebBundle::page.html.twig" %}
 {% block content %}
-
-
 
     {# Slider #}
     <div class="container carousel slide" data-interval="5000" id="slider">
@@ -49,5 +59,43 @@
             <span class="icon-next"></span>
         </a>
     </div>
+
+    {# Produkte #}
+
+    <div class="container">
+        <div class="row">
+            <aside class="col-lg-4">
+                <div class="page-header">
+                    <h2>Wir mischen dein Küchenregal auf</h2>
+                </div>
+                <ol>
+                    <li>Bestellen</li>
+                    <li>backen</li>
+                    <li>fertig!</li>
+                </ol>
+                <p>Die Backmischungen der Backgesellschaft sind öko, sehen schön aus und machen Sinn. Sie eignen sich auch
+                    hervorragend als Geschenk.</p>
+                <p>Wir verwenden nur die besten Zutaten, natürlich Bio-zertifiziert und ohne künstliche Zusatzstoffe.</p>
+            </aside>
+            <div class="col-lg-4">
+                {{ macro.product('schoco','Schoko-Cookies', 5, 'Bridget_1.png') }}
+                {{ macro.product('lebco','Lebkuchen Cookies', 6, 'Dolores_1.png') }}
+                {{ macro.product('spica','Gewürzkuchen im Glas', 4, 'Dolores_2.png') }}
+            </div>
+            <div class="col-lg-4">
+                {{ macro.product('macco','Makadamia-Cookies', 11, 'Mackie_1.png') }}
+                {{ macro.product('smaco','Smartie-Cookies', 7, 'Niko_1.png') }}
+                {{ macro.product('joca','Cranberrykuchen im Glas', 7, 'Regina_1.png') }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4"><button type="submit" class="btn btn-lg btn-success pull-right">Jetzt bestellen!</button></div>
+        </div>
+    </div>
+
+
+
 
 {% endblock content %}
